# apple-media-rs

./: Cargo.toml  README.md  rustfmt.toml
av-foundation/: Cargo.toml  README.md
av-foundation/examples/: device_settings.rs  discover_devices.rs  video_capture.rs
av-foundation/src/: capture_device.rs  capture_device_discovery_session.rs  capture_input.rs  capture_output_base.rs  capture_session.rs  capture_session_preset.rs  capture_video_data_output.rs  lib.rs  media_format.rs  video_settings.rs
core-audio-types/: Cargo.toml  README.md
core-audio-types/src/: base_types.rs  lib.rs  session_types.rs
core-graphics/: Cargo.toml
core-media/: Cargo.toml  README.md
core-video/: Cargo.toml  README.md
core-video/src/: buffer.rs  image_buffer.rs  pixel_buffer.rs
screen-capture-kit/: Cargo.toml  README.md
