[package]
name = "core-audio-types"
description = "Bindings to CoreAudioTypes framework"
homepage = "https://github.com/rust-media/apple-media-rs"
repository = "https://github.com/rust-media/apple-media-rs"
documentation = "https://docs.rs/core-audio-types"
version = "0.1.6"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia::audio", "os::macos-apis"]
keywords = ["coreaudio"]
edition = "2018"

[dependencies]
cfg-if = "1.0"
core-foundation-sys = { version = "0.8", default-features = false }
libc = "0.2"

[features]
default = ["link"]
link = ["core-foundation-sys/link"]

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
