[package]
name = "core-video"
description = "Safe bindings to CoreVideo framework"
homepage = "https://github.com/libark/apple-media-rs"
repository = "https://github.com/libark/apple-media-rs"
documentation = "https://docs.rs/core-video"
version = "0.3.3"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia::video", "os::macos-apis"]
keywords = ["corevideo"]
edition = "2018"

[dependencies]
block = "0.1"
core-foundation = { version = "0.9", default-features = false }
core-graphics2 = { version = "0.3", path = "../core-graphics", default-features = false, features = ["display"] }
io-surface = { version = "0.15", default-features = false }
libc = "0.2"
metal = { version = "0.29", optional = true }
objc2 = { version = "0.5", optional = true }

[features]
default = ["display-link", "link"]
display-link = []
link = ["core-foundation/link", "core-graphics2/link"]
objc = ["objc2"]

[package.metadata.docs.rs]
no-default-features = true
features = ["display-link", "metal", "objc"]
default-target = "x86_64-apple-darwin"
targets = [
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
]
